Uneven squares bug fix
Uneven squares due to adding border to divs. Fixed by adding 5 px to
size of container div.

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 .container {
-    width: 960px;
+    width: 965px;
     display: flex;
     flex-wrap: wrap;
     margin: auto;
